alteração no html

--- a/Produto/index.html
+++ b/Produto/index.html
@@ -8,12 +8,24 @@
 </head>
 <body>
     <div class="parterosa"><a href="../PaginaPrincipal/index.html">IsadoraSecrets</a></div>
+
     <div class="div2">
+
             <img src="../PaginaPrincipal/assets/bodysplash.jpg" alt="">
+
             <div class="texto">
-                <div class="botao"><h1>Body Splash Victoria´s Secrets Love Spell 250ml</h1><div class="comprar"><h1>COMPRAR</h1></div></div>
-                <span>De <span class="cortado">R$ 19999,90</span></span><span> por <span class="sublinhado">R$ 159,90</span></span>
+
+                <div class="botao"><h1>Body Splash Victoria´s Secrets Love Spell 250ml</h1>
+                    <div>
+                        <div class="comprar"><h1>COMPRAR</h1></div>
+
+
+                        <span>De <span class="cortado">R$ 19999,90</span> por <span class="sublinhado">R$ 159,90</span></span>
+                    </div>
+                </div>
+
                 <h1 class="essencias">Essencias:</h1>
+
                 Uma fragrância especificamente feminina que envolve e seduz contém em sua composição notas de cabeça em pêssego, morango, e notas aldeíticas. As notas de corpo são pêra, ameixa, violeta, e lavanda, a fixação é feita através de musk e caramelo. Ideal para formulação e composição de linhas femininas florais, frutadas e com um toque de sedução. Um sucesso na linha da victoria´s Secrets!
             </div>
     </div>
