--- a/Produto/index.html
+++ b/Produto/index.html
@@ -20,13 +20,24 @@
                         <div class="comprar"><h1>COMPRAR</h1></div>
 
 
-                        <span>De <span class="cortado">R$ 19999,90</span> por <span class="sublinhado">R$ 159,90</span></span>
+                        <span>De <span class="cortado">R$ 19999,90</span> por <span class="sublinhado">R$ 159,90</span></span><br>
+                        ou<br>
+                        5x de R$ 31,98 sem juros
                     </div>
                 </div>
 
-                <h1 class="essencias">Essencias:</h1>
+                <div class="caixa">
+                    <div class="caixaessencias">
+                        <h1 class="rosa">Essencias:</h1>
 
-                Uma fragrância especificamente feminina que envolve e seduz contém em sua composição notas de cabeça em pêssego, morango, e notas aldeíticas. As notas de corpo são pêra, ameixa, violeta, e lavanda, a fixação é feita através de musk e caramelo. Ideal para formulação e composição de linhas femininas florais, frutadas e com um toque de sedução. Um sucesso na linha da victoria´s Secrets!
+                        Uma fragrância especificamente feminina que envolve e seduz contém em sua composição notas de cabeça em pêssego, morango, e notas aldeíticas. As notas de corpo são pêra, ameixa, violeta, e lavanda, a fixação é feita através de musk e caramelo. Ideal para formulação e composição de linhas femininas florais, frutadas e com um toque de sedução. Um sucesso na linha da victoria´s Secrets!
+                    </div>
+                        <div>
+                        <h1 class="rosa">Avaliação Geral do Produto:</h1>
+                        <img src="./assets/estrelas.png" alt="" class="estrela">
+                    </div>
+                </div>
+                <img src="./assets/perfume.jpg" alt="" class="perfume">
             </div>
     </div>
 </body>
